Fixed and nerfed Witches   * No longer use Invisibility and Slow Falling if drinking a potion   * Chance to use a water breathing and fire resistance potion is now same as vanilla (lowered a lot)   * Fixed vanilla potions dropping as "Uncraftable Potion"   * Drinkable and throwable potions list in the config now accepts vanilla potions